[project]
name = "subtitle-remover"
version = "0.1.0"
description = "Subtitle Remover using Craft and LaMa"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "craft-text-detector>=0.4.3",
    "ffmpeg-python>=0.2.0",
    "gdown>=5.2.1",
    "numpy==1.26.4",
    "opencv-python>=4.5.4.60",
    "pillow>=12.1.1",
    "scipy>=1.15.3",
    "simple-lama-inpainting>=0.1.0",
    "torch==2.0.1",
    "torchvision==0.15.2",
]

[tool.uv]
package = false
